syntax = "proto3";

package bookstore;

option go_package = "./proto";

// Define Book message
message Book {
  int32 id = 1;
  string title = 2;
  string author = 3;
  string isbn = 4;
  float price = 5;
  int32 stock = 6;
  int32 published_year = 7;
}

// Define BookCategory enum
enum BookCategory {
  UNKNOWN = 0;
  FICTION = 1;
  NONFICTION = 2;
  SCIFI = 3;
  FANTASY = 4;
  MYSTERY = 5;
  BIOGRAPHY = 6;
}

// Define DetailedBook message
message DetailedBook {
  Book book = 1;
  BookCategory category = 2;
  string description = 3;
  repeated string tags = 4;
  float rating = 5;
}

// Define Author message
message Author {
  int32 id = 1;
  string name = 2;
  string bio = 3;
  int32 birth_year = 4;
  repeated Book books = 5;
}
